objects/Personal_Plan__c.object
<CustomObject>
    <description>This is the organizing/summarizing object that incorporates Personal Goals. The determination as to when a given Payee may have overlapping or simultaneously active Personal Plans ultimately is a decision made by a member of the Incentives Team. As a result, there are no controls in place to identify or prevent duplicate Personal Plans. 
If an Personal Plan represents the next iteration of a prior Personal Plan, the latest revision will identify the Personal Plan whose place is being taken.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>PP{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_End__c</fullName>
        <label>Plan End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start__c</fullName>
        <label>Plan Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Staff_Member__c</field>
                <operation>equals</operation>
                <valueField>Personal_Plan__c.Staff_Member__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Personal_Plan__c</referenceTo>
        <relationshipName>Individual_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personal Plans</relationshipLabel>
        <relationshipName>Individual_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Status__c</fullName>
        <label>Submission Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Personal Plan</label>
    <listViews>
        <fullName>Active_Personal_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Start__c</columns>
        <columns>Plan_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Personal Plans</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Personal_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Start__c</columns>
        <columns>Plan_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Start__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Plan_End__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Current Personal Plans</label>
    </listViews>
    <listViews>
        <fullName>Future_Personal_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Start__c</columns>
        <columns>Plan_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Start__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Plan_End__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Future Personal Plans</label>
    </listViews>
    <nameField>
        <label>Personal Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Plans</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Plan_Dates</fullName>
        <active>true</active>
        <description>The Plan Start date cannot be later than the Plan End date.</description>
        <errorConditionFormula>Plan_Start__c  &gt;  Plan_End__c</errorConditionFormula>
        <errorDisplayField>Plan_Start__c</errorDisplayField>
        <errorMessage>The Plan Start date cannot be later than the Plan End date.</errorMessage>
    </validationRules>
</CustomObject>